mariadb/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: mariadb
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/version: 12.3.3
  name: mariadb
  namespace: default
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/component: primary
      app.kubernetes.io/instance: mariadb
      app.kubernetes.io/name: mariadb
  serviceName: mariadb
  template:
    metadata:
      labels:
        app.kubernetes.io/component: primary
        app.kubernetes.io/instance: mariadb
        app.kubernetes.io/name: mariadb
        app.kubernetes.io/version: 12.3.3
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app.kubernetes.io/name
                    operator: In
                    values:
                      - argocd-application-controller
              topologyKey: kubernetes.io/hostname
      automountServiceAccountToken: false
      containers:
        - name: mariadb
          image: docker.io/mariadb:12.3.3-noble
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
              name: mysql
              protocol: TCP
          livenessProbe:
            exec:
              command:
                - /bin/bash
                - '-ec'
                - mariadb-admin status -uroot -p"${MARIADB_ROOT_PASSWORD:-}"
            failureThreshold: 3
            initialDelaySeconds: 120
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            exec:
              command:
                - /bin/bash
                - '-ec'
                - mariadb-admin ping -uroot -p"${MARIADB_ROOT_PASSWORD:-}"
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 375m
              ephemeral-storage: 2Gi
              memory: 384Mi
            requests:
              cpu: 250m
              ephemeral-storage: 50Mi
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 999
            runAsNonRoot: true
            runAsUser: 999
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: data
            - mountPath: /tmp
              name: temp
            - mountPath: /run/mysqld
              name: mysqld
      dnsPolicy: ClusterFirst
      nodeSelector:
        topology.linode.com/region: ap-northeast
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 999
        fsGroupChangePolicy: Always
      serviceAccount: mariadb
      serviceAccountName: mariadb
      terminationGracePeriodSeconds: 30
      volumes:
        - name: config
          configMap:
            defaultMode: 420
            name: mariadb
        - name: temp
          emptyDir: {}
        - name: mysqld
          emptyDir: {}
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        labels:
          app.kubernetes.io/component: primary
          app.kubernetes.io/instance: mariadb
          app.kubernetes.io/name: mariadb
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
        storageClassName: linode-block-storage-retain
        volumeMode: Filesystem
