mariadb/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: mariadb
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/version: 12.3.3
  name: mariadb
  namespace: default
spec:
  egress:
    - {}
  ingress:
    - ports:
        - port: 3306
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/component: primary
      app.kubernetes.io/instance: mariadb
      app.kubernetes.io/name: mariadb
  policyTypes:
    - Ingress
    - Egress
